--- a/src/Haromszogek/Haromszogek.form
+++ b/src/Haromszogek/Haromszogek.form
@@ -82,6 +82,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Adatok bet&#xf6;lt&#xe9;se"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBetoltActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
